[gd_scene load_steps=4 format=3 uid="uid://p6kopkftvxki"]

[ext_resource type="Script" uid="uid://sc1yho3xyt2d" path="res://menu.gd" id="1_lti8b"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 3
glow_enabled = true
glow_intensity = 2.0
glow_strength = 1.5
glow_bloom = 0.5
glow_blend_mode = 0
glow_hdr_threshold = 0.1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1"]
blend_mode = 1

[node name="Menu" type="Node2D"]
script = ExtResource("1_lti8b")

[node name="Background" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="Label" type="Label" parent="."]
material = SubResource("CanvasItemMaterial_1")
offset_left = 396.0
offset_top = 150.0
offset_right = 733.0
offset_bottom = 235.0
theme_override_colors/font_color = Color(0.8, 0.2, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Rhythmaoke"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 396.0
offset_top = 270.0
offset_right = 733.0
offset_bottom = 355.0
theme_override_colors/font_color = Color(0.8, 0.2, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Выбрать файл"
flat = true

[node name="DifficultyButtons" type="VBoxContainer" parent="."]
offset_left = 467.0
offset_top = 359.0
offset_right = 667.0
offset_bottom = 531.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="DifficultyButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Сложность:"
horizontal_alignment = 1

[node name="EasyButton" type="Button" parent="DifficultyButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Легкая"

[node name="NormalButton" type="Button" parent="DifficultyButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Средняя"

[node name="HardButton" type="Button" parent="DifficultyButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Сложная"

[node name="SongList" type="ScrollContainer" parent="."]
offset_left = 50.0
offset_top = 150.0
offset_right = 350.0
offset_bottom = 550.0

[node name="SongListContainer" type="VBoxContainer" parent="SongList"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="SongsLabel" type="Label" parent="SongList/SongListContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "История песен:"
horizontal_alignment = 1

[node name="SettingsButton" type="Button" parent="."]
offset_left = 396.0
offset_top = 221.0
offset_right = 733.0
offset_bottom = 286.0
theme_override_colors/font_color = Color(0.8, 0.2, 1, 1)
theme_override_font_sizes/font_size = 32
text = "Настройки"
flat = true

[node name="QuitButton" type="Button" parent="."]
offset_left = 396.0
offset_top = 566.0
offset_right = 733.0
offset_bottom = 608.0
theme_override_colors/font_color = Color(0.8, 0.2, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Выход"
flat = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
